fix z-index svg icon

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -43,15 +43,17 @@ footer {
           display: inline-block;
           width: 2.5rem;
           height: 2.5rem;
-          background-color: var(--shape-stroke);
+          background-color: var(--blue-low);
           border-radius: 50%;
           opacity: 0;
-          z-index: -1;
 
           transition: opacity .4s ease;
         }
 
         & > svg {
+          position: relative;
+          z-index: 1;
+          
           & path {
             transition: fill .4s ease
           }
